# sane_in_the_membrane

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
gui-app/: CMakeLists.txt
gui-app/src/: GlobalLogger.cpp  main.cpp
gui-app/src/Readers/: ScanResponseReader.cpp  ScanResponseReader.hpp
gui-app/src/Service/: ChannelStateChangeService.cpp  ChannelStateChangeService.hpp  DeviceList.cpp  DeviceList.hpp  FileManager.hpp  FileManger.cpp  GetScannersService.cpp  GetScannersService.hpp  RefreshScannersService.cpp  RefreshScannersService.hpp  UniqueIdGenerator.cpp  UniqueIdGenerator.hpp
gui-app/src/Ui/: ImageView.cpp  ImageView.hpp  MainApp.hpp  MainWindow.cpp  MainWindow.hpp  RefreshScanners.cpp  RefreshScanners.hpp  ScanButton.cpp  ScanButton.hpp  ScannerSelect.cpp  ScannerSelect.hpp
gui-app/src/Ui/Image/: ImageHorizontalScroll.cpp  ImageHorizontalScroll.hpp  ImageToolbar.cpp  ImageToolbar.hpp
gui-app/src/Utils/: File.cpp  File.hpp  Globals.cpp  Globals.hpp  ScannerUtils.hpp
gui-app/src/Utils/Pdf/: Pdf.hpp
gui-app/src/Utils/ServiceProxy/: ChangeStateWatcherProxy.cpp  ChangeStateWatcherProxy.hpp  DeviceListProxy.cpp  DeviceListProxy.hpp  GetScannerServiceProxy.cpp  GetScannerServiceProxy.hpp  RefreshScannersServiceProxy.cpp  RefreshScannersServiceProxy.hpp  ScanResponseReaderProxy.cpp  ScanResponseReaderProxy.hpp  ServiceProxyBase.cpp  ServiceProxyBase.hpp
gui-app/src/Utils/mDNS/: mDns.hpp  mDnsAutoFind.cpp  mDnsAutoFind.hpp
gui-app/src/scan-ui/: scan-button.cpp  scan-button.hpp
proto/helloworld/v1/: helloworld.proto
proto/scanner/v1/: scanner.proto
proto_lib/: CMakeLists.txt
sane_wrapper/: CMakeLists.txt
sane_wrapper/include/: Sane.hpp  SaneDevice.hpp  SaneDeviceBuffer.hpp  SaneStatus.hpp
sane_wrapper/src/: Sane.cpp  SaneDevice.cpp  SaneDeviceBuffer.cpp  SaneStatus.cpp
server/: CMakeLists.txt
server/src/: GlobalLogger.cpp  StartupOrchestrator.cpp  main.cpp
server/src/Connection/: ServerSocket.cpp  ServerSocket.hpp
server/src/Reactors/: ScanResponseReactor.cpp  ScanResponseReactor.hpp
server/src/Service/: HelloWorldService.hpp  ScannerService.cpp  ScannerService.hpp
server/src/Threading/: ThreadPool.cpp  ThreadPool.hpp
server/src/mDns/: AvahiServiceRegistration.hpp
utils/: CMakeLists.txt
utils/src/: Assert.hpp  Logger.cpp  Logger.hpp  SynchronizedAccess.hpp
utils/src/image/: MagickImageWrapper.cpp  MagickImageWrapper.hpp
